--- a/pages/19406.html
+++ b/pages/19406.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      geodesic completeness in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      geodesic completeness
   </h1>
 
 
@@ -292,6 +292,8 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8492/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -304,51 +306,155 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Test</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ad6252825e4913423dbce3b61a87fcc236c3b27c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><msub><mi>e</mi> <mn>7</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>6</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>5</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>3</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>2</mn></msub><msub><mi>e</mi> <mn>1</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>4</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>7</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>6</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>5</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>3</mn></msub><msub><mi>e</mi> <mn>4</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>6</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>7</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>6</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>5</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>4</mn></msub><msub><mi>e</mi> <mn>6</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>3</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>7</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>6</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>5</mn></msub><msub><mi>e</mi> <mn>3</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>2</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><msub><mi>e</mi> <mn>7</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>2</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>7</mn></msub></mrow></munder><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><munder><munder><mrow><msub><mi>e</mi> <mn>7</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></munder></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mn>1</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-   &amp; e_7 (e_6 (e_5 (e_4 (e_3 (\underset{-e_4}{\underbrace{e_2 e_1}})))))
-   \\
-   &amp; =
-   - e_7 (e_6 (e_5 (e_4 (\underset{e_6}{\underbrace{e_3 e_4}}))))
-   \\
-   &amp; =
-   - e_7 (e_6 (e_5 (\underset{e_3}{\underbrace{e_4 e_6}})))
-   \\
-   &amp; =
-   - e_7 (e_6 (\underset{-e_2}{\underbrace{e_5 e_3}}))
-   \\
-   &amp; =
-   + e_7 (\underset{-e_7}{\underbrace{e_6 e_2}})
-   \\
-   &amp; =
-   - \underset{= -1}{\underbrace{e_7 e_7}}
-   \\
-   &amp; =
-   + 1
-  \end{aligned}
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-</annotation></semantics></math></div>
+<h4 id='riemannian_geometry'>Riemannian geometry</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></strong></p>
+
+<h2 id='basic_definitions'>Basic definitions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/metric+space'>metric</a>, <a class='existingWikiWord' href='/nlab/show/isometry'>isometry</a>, <a class='existingWikiWord' href='/nlab/show/isometry+group'>isometry group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/moduli+space+of+Riemannian+metrics'>moduli space of Riemannian metrics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>Lorentzian manifold</a>, <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geodesic'>geodesic</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geodesic+convexity'>geodesic convexity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geodesic+flow'>geodesic flow</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a>, <a class='existingWikiWord' href='/nlab/show/torsion+of+a+metric+connection'>torsion of a metric connection</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='further_concepts'>Further concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hodge+star+operator'>Hodge inner product</a>, <a class='existingWikiWord' href='/nlab/show/Hodge+star+operator'>Hodge star operator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gradient'>gradient</a>, <a class='existingWikiWord' href='/nlab/show/gradient+flow'>gradient flow</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+conjecture'>Poincaré conjecture</a>-theorem</li>
+</ul>
+
+<h2 id='applications'>Applications</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a>, <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein equations</a>, <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></li>
+</ul>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/Riemannian+geometry+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>A (<a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-</a>)<a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> <math class='maruku-mathml' display='inline' id='mathml_766ad5e7da7c018c380c6e298724a8200632cf95_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> is called <em>geodesically complete</em> (or just <em>complete</em>, for short) if each of its <a class='existingWikiWord' href='/nlab/show/geodesic'>geodesics</a> extends indefinitely, hence if the geodesic <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential map</a> at every point <math class='maruku-mathml' display='inline' id='mathml_766ad5e7da7c018c380c6e298724a8200632cf95_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>x \in X</annotation></semantics></math> is defined on the full <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent space</a> at that point, <math class='maruku-mathml' display='inline' id='mathml_766ad5e7da7c018c380c6e298724a8200632cf95_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>T</mi> <mi>x</mi></msub><mi>X</mi><mo>⟶</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>\exp \colon T_x X \longrightarrow X</annotation></semantics></math>.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Euclidean+space'>Euclidean spaces</a> <math class='maruku-mathml' display='inline' id='mathml_766ad5e7da7c018c380c6e298724a8200632cf95_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> and the round <a class='existingWikiWord' href='/nlab/show/sphere'>n-spheres</a> <math class='maruku-mathml' display='inline' id='mathml_766ad5e7da7c018c380c6e298724a8200632cf95_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>S^n</annotation></semantics></math> are geodesically complete. But any <a class='existingWikiWord' href='/nlab/show/ball'>open ball</a> of <a class='existingWikiWord' href='/nlab/show/finite+number'>finite</a> <a class='existingWikiWord' href='/nlab/show/radius'>radius</a> inside <math class='maruku-mathml' display='inline' id='mathml_766ad5e7da7c018c380c6e298724a8200632cf95_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is not.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Clifford-Klein+space+form'>Clifford-Klein space form</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/spherical+space+form'>spherical space form</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Riemannian_manifold#Geodesic_completeness'>Riemannian manifold – Geodesic completeness</a></em></li>
+</ul>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 25, 2018 at 02:05:47.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on April 25, 2018 at 02:48:44.
+  See the <a href="https://ncatlab.org/nlab/history/geodesic completeness" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1491" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1491 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/geodesic+completeness" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/geodesic completeness/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/geodesic+completeness" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/geodesic+completeness" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/geodesic+completeness" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
