--- a/pages/3131.html
+++ b/pages/3131.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2587/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -459,7 +457,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/twist'>balanced monoidal category</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/balanced+monoidal+category'>balanced monoidal category</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/twist'>twist</a></li>
@@ -700,11 +698,11 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>One typically starts with a monoidal category <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi><mo>=</mo><mo stretchy='false'>(</mo><mi>M</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>M = (M, \otimes, 1)</annotation></semantics></math> which is <em>regular</em> in the sense that it has <a class='existingWikiWord' href='/nlab/show/equalizer'>equalizers</a> which are preserved by <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo></mrow><annotation encoding='application/x-tex'>\otimes</annotation></semantics></math> on both sides. (The monoidal structure does <em>not</em> need be symmetric.)</p>
+<p>One typically starts with a monoidal category <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi><mo>=</mo><mo stretchy='false'>(</mo><mi>M</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>M = (M, \otimes, 1)</annotation></semantics></math> which is <em>regular</em> in the sense that it has <a class='existingWikiWord' href='/nlab/show/equalizer'>equalizers</a> which are preserved by <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo></mrow><annotation encoding='application/x-tex'>\otimes</annotation></semantics></math> on both sides. (The monoidal structure does <em>not</em> need be symmetric.)</p>
 
-<p>There is a <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a> <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Comod</mi><mo stretchy='false'>(</mo><mi>M</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Comod(M)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/comonoid'>comonoids</a> and <em>bicomodules</em> in <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>: this is a special case of the bicategory <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Mod</mi><mo stretchy='false'>(</mo><mi>K</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Mod(K)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/monad'>monads</a> and <a class='existingWikiWord' href='/nlab/show/module+over+a+monad'>bimodules</a> in a bicategory <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>, where in this case <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>=</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><msup><mi>M</mi> <mi>op</mi></msup><mo>=</mo><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>M</mi><msup><mo stretchy='false'>)</mo> <mi>co</mi></msup></mrow><annotation encoding='application/x-tex'>K = \mathbf{B} M^{op} = (\mathbf{B} M)^{co}</annotation></semantics></math>. Then an <strong>internal category in <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math></strong> is a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> in <math class='maruku-mathml' display='inline' id='mathml_7721bff96f2647084291d4cb91e08584b8b0eb03_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Comod</mi><mo stretchy='false'>(</mo><mi>M</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Comod(M)</annotation></semantics></math>.</p>
+<p>There is a <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a> <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Comod</mi><mo stretchy='false'>(</mo><mi>M</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Comod(M)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/comonoid'>comonoids</a> and <em><a class='existingWikiWord' href='/nlab/show/bicomodule'>bicomodules</a></em> in <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>: this is a special case of the bicategory <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Mod</mi><mo stretchy='false'>(</mo><mi>K</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Mod(K)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/monad'>monads</a> and <a class='existingWikiWord' href='/nlab/show/module+over+a+monad'>bimodules</a> in a bicategory <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>, where in this case <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>=</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><msup><mi>M</mi> <mi>op</mi></msup><mo>=</mo><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>M</mi><msup><mo stretchy='false'>)</mo> <mi>co</mi></msup></mrow><annotation encoding='application/x-tex'>K = \mathbf{B} M^{op} = (\mathbf{B} M)^{co}</annotation></semantics></math>. Then an <strong>internal category in <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math></strong> is a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> in <math class='maruku-mathml' display='inline' id='mathml_7a625518af54d4626a5e712ae824409935a64825_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Comod</mi><mo stretchy='false'>(</mo><mi>M</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Comod(M)</annotation></semantics></math>.</p>
 
-<p>There are two kind of morphisms of noncartesian internal categories: <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> and <span class='newWikiWord'>cofunctors<a href='/nlab/new/cofunctor'>?</a></span> (which here are <em>not</em> the same as <a class='existingWikiWord' href='/nlab/show/contravariant+functor'>contravariant functors</a>).</p>
+<p>There are two kind of morphisms of noncartesian internal categories: <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> and <span class='newWikiWord'>cofunctors<a href='/nlab/new/cofunctor'>?</a></span> (which here are <em>not</em> the same as <a class='existingWikiWord' href='/nlab/show/contravariant+functor'>contravariant functors</a>).[object Object]</p>
 
 <h2 id='examples_2'>Examples</h2>
 
@@ -730,19 +728,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 30, 2017 10:41:40 
-  by <span class="newWikiWord">Pierre Cagne<a href="/nlab/new/Pierre+Cagne">?</a></span>
-  (81.194.27.158)
+  <p>
+  Last revised on April 26, 2018 at 15:59:01.
+  See the <a href="https://ncatlab.org/nlab/history/internal category in a monoidal category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/internal+category+in+a+monoidal+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/internal+category+in+a+monoidal+category/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/internal+category+in+a+monoidal+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/internal+category+in+a+monoidal+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/internal+category+in+a+monoidal+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/internal+category+in+a+monoidal+category/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/internal+category+in+a+monoidal+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/internal+category+in+a+monoidal+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/internal category in a monoidal category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/internal+category+in+a+monoidal+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/internal+category+in+a+monoidal+category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/internal+category+in+a+monoidal+category" id="view_source" rel="nofollow">Source</a>
