--- a/pages/1788.html
+++ b/pages/1788.html
@@ -304,35 +304,19 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Rod editing in new empty profile for Firefox Nightly when bad cookies.sqlite copied in I can’t edit</p>
-
-<p>I’ve just removed all 3 ncatlab.org cookies and am trying again.</p>
-
-<p>I got the message</p>
-
-<blockquote>
-<p>Anonymous has been editing this page for 3 minutes.</p>
-
-<p>Edit the page anyway Cancel</p>
-</blockquote>
-
-<p>So I’m trying “Edit the page anyway”</p>
-
-<p>That worked, now trying with bad cookies restored</p>
-
-<p>Test</p>
+    <p>Rod editing with defective cookies.</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 26, 2018 at 16:10:24.
+  Last revised on April 26, 2018 at 18:07:43.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1499" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1499 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1500" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1500 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
